--- a/angular7MoneyTransfert/src/app/home/home.component.html
+++ b/angular7MoneyTransfert/src/app/home/home.component.html
@@ -1,102 +1,1 @@
-
-    <section id="container">
-      <!--header start-->
-      <header class="header fixed-top clearfix">
-      <!--logo start-->
-      <div class="brand">
-          <a [routerLink]="['/']" class="logo">
-              WEBI
-          </a>
-          <div class="sidebar-toggle-box">
-              <div class="fa fa-bars"></div>
-          </div>
-      </div>
-      <!--logo end-->
-      <div class="top-nav clearfix">
-          <!--search & user info start-->
-          <ul class="nav pull-right top-menu">
-              <li>
-                  <input type="text" class="form-control search" placeholder=" Search">
-              </li>
-              <!-- user login dropdown start-->
-              <li class="dropdown">
-                  <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                      <img alt="" src="assets/images/2.png">
-                      <span class="username">John Doe</span>
-                      <b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu extended logout">
-                      <li><a href="#"><i class=" fa fa-suitcase"></i>Profile</a></li>
-                      <li><a [routerLink]="['/logout']"><i class="fa fa-key"></i> Déconnexion</a></li>
-                  </ul>
-              </li>
-              <!-- user login dropdown end -->
-             
-          </ul>
-          <!--search & user info end-->
-      </div>
-      </header>
-      <!--header end-->
-      <!--sidebar start-->
-      <aside>
-          <div id="sidebar" class="nav-collapse">
-              <!-- sidebar menu start-->
-              <div class="leftside-navigation">
-                  <ul class="sidebar-menu" id="nav-accordion">
-                      <li>
-                        <a [routerLink]="['/home']">Home
-                              <i class="fa fa-dashboard"></i>
-                              <span>Dashboard</span>
-                          </a>
-                      </li>
-                      
-                      <li class="sub-menu">
-                            <a href="javascript:;">
-                                    <i class="fa fa-book"></i>
-                                    <span>Partenaire</span>
-                                </a>
-                        
-                          <ul class="sub" *ngIf="isAdmin()">
-                              <li><a [routerLink]="['/partenaires']">Partenaire</a></li>
-                              <li><a [routerLink]="['/addPartenaire']">Ajout</a></li>
-                              <li><a [routerLink]="['/partenaireOperation']">Liste Operations Partenaire</a></li>
-                          </ul>
-                      </li>
-                      <li class="sub-menu" >
-                        <a href="javascript:;">
-                              <i class="fa fa-bullhorn"></i>
-                              <span>Utilisateurs</span>
-                          </a>
-                          <ul class="sub">
-                                <li ><a [routerLink]="['/utilisateurs']" >Utilisateurs</a></li>
-                                <li *ngIf="isAdminPartenaire()"><a [routerLink]="['/addUser']">Ajout</a></li>
-                                <li *ngIf="isUserPart()"><a [routerLink]="['/envoiTransaction']">Envoi</a></li>
-                                <li *ngIf="isUserPart()"><a [routerLink]="['/retraitTransaction']">Retrait</a></li>
-                                <li *ngIf="isAdminPartenaire()"><a [routerLink]="['/UserOperations']">Operations Utilisateurs</a></li>
-                            </ul>
-                      </li>
-                      <li class="sub-menu" *ngIf="isAdminPartenaireOrCaissier()">
-                          <a href="javascript:;">
-                              <i class="fa fa-th"></i>
-                              <span>Compte</span>
-                          </a>
-                          <ul class="sub">
-                              <li *ngIf="isCaissier()"><a [routerLink]="['/compte']">Comptes</a></li>
-                              <li *ngIf="isPartenaire()"><a [routerLink]="['/addCompte']">Ajout compte</a></li>
-                          </ul>
-                      </li>
-                      
-                  </ul>            </div>
-              <!-- sidebar menu end-->
-          </div>
-      </aside>
-      <!--sidebar end-->
-      
-      </section>
-      <div id="testdiv" style="display:none">
-            <div>TEST</div>
-            <div id="hidediv">TEST2</div>
-        </div>
-        <a href="javascript:genPDF()">Download PDF</a>
-
-        
+<app-navbar></app-navbar>
