--- a/angular7MoneyTransfert/src/app/historique-operation/historique-operation.component.html
+++ b/angular7MoneyTransfert/src/app/historique-operation/historique-operation.component.html
@@ -1,4 +1,4 @@
-<app-home></app-home>
+<app-navbar></app-navbar>
 <h2>Responsive Table</h2>
 <div class="table-wrapper">
     <table class="fl-table">
