--- a/angular7MoneyTransfert/src/app/partenaire/partenaire.component.html
+++ b/angular7MoneyTransfert/src/app/partenaire/partenaire.component.html
@@ -1,4 +1,4 @@
-<app-home></app-home>
+<app-navbar></app-navbar>
 <div class="row">
   <div class="col-md-2"></div>
   <div class="col-md-9">
@@ -55,22 +55,23 @@
              <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> status </th>
                 <td mat-cell *matCellDef="let row" [style.color]="row.status">
-                  <span *ngIf="row.status=='actif'">
-                      <button mat-raised-button color="accent" (click)="bloquerPartenaire(row)">Actif</button>
-                  </span>
-                  <span *ngIf="row.status=='inactif'">
-                      <button mat-raised-button color="warn" (click)="bloquerPartenaire(row)">Inactif</button>
-                  </span>
-                    
-                </td>
+                    <span *ngIf="row.status=='actif'">
+                        <button mat-raised-button color="accent" (click)="bloquerPartenaire(row.ninea)">Actif</button>
+                    </span>
+                    <span *ngIf="row.status=='inactif'">
+                        <button mat-raised-button color="warn" (click)="bloquerPartenaire(row.ninea)">Inactif</button>
+                    </span>
+                      
+                  </td>
               </ng-container>
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> editer </th>
-              <td mat-cell *matCellDef="let row" [style.color]="row.color"><a routerLink="/editPartenaire/{{row.id}}"><fa-icon [icon]="faEdit"></fa-icon></a></td>
-            </ng-container>
+              <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> editer </th>
+                <td mat-cell *matCellDef="let row" [style.color]="row.color"><a routerLink="/editPartenaire/{{row.id}}"><fa-icon [icon]="faEdit"></fa-icon></a></td>
+              </ng-container>
             <ng-container matColumnDef="contrat">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header scope="col"> Télécharger contrat </th>
-              <td mat-cell *matCellDef="let row" [style.color]="row.color"><button (click)="genPDF(row.id)"><fa-icon [icon]="faDownload"></fa-icon></button></td>
+              <td mat-cell *matCellDef="let row" [style.color]="row.color"><a href="/partenaire/contrat/{{row.id}}">
+              <fa-icon [icon]="faDownload"></fa-icon></a></td>
             </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;">
@@ -86,9 +87,3 @@
   </div>
   <div class="col-md-1"></div>
 </div>
-
-<div *ngIf="contrat" id="testdiv" style="display:none">
-    <div>TEST</div>
-    <div id="hidediv">TEST2</div>
-</div>
-<a href="javascript:genPDF()">Download PDF</a>
