--- a/angular7MoneyTransfert/src/app/users/users.component.css
+++ b/angular7MoneyTransfert/src/app/users/users.component.css
@@ -1,34 +1,18 @@
-/* table {
-    width: 100%;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  td, th {
-    width: 25%;
-  }
-  th{
-      background-color: black;
-      color: white;
-  }
-  table {
-    width: 100%;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  td, th {
-    width: 14%;
-  }
-     */
-
-     .fl-table {
+mat-paginator{
+  float: left;
+}
+th{
+        color: #ffffff;
+        background: #007bff;
+}
+td{
+  color: #007bff;
+}
+th,td{
+        text-align: center;
+        padding: 15%;
+}
+     /* .fl-table {
         border-radius: 5px;
         font-size: 12px;
         font-weight: normal;
@@ -53,15 +37,15 @@
     
     .fl-table th {
         color: #ffffff;
-        background: black;
+        background: #007bff;
     }
     
     
     .fl-table th:nth-child(odd) {
         color: #ffffff;
-        background: #324960;
+        background: #007bff;
     }
     
     .fl-table tr:nth-child(even) {
         background: #F8F8F8;
-    }
+    }  */
