--- a/angular7MoneyTransfert/src/app/add-compte/add-compte.component.html
+++ b/angular7MoneyTransfert/src/app/add-compte/add-compte.component.html
@@ -1,5 +1,10 @@
 <app-navbar></app-navbar>
-<div class="py-5">
+<div class=" mt-5 container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Interface Compte</h2><hr>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-6 mx-auto">
       <span class="anchor" id="formLogin"></span>
@@ -7,7 +12,7 @@
       <!-- form card registration -->
       <div class="card rounded-0">
         <div class="card-header">
-          <h3 class="mb-0">Ajout compte</h3>
+          <h2 class="mb-0">Ajout d'un compte</h2>
         </div>
         <div class="card-body">
           <form class="form">
