--- a/angular7MoneyTransfert/src/app/contrat/contrat.component.html
+++ b/angular7MoneyTransfert/src/app/contrat/contrat.component.html
@@ -27,21 +27,25 @@
   
       <h2>Il a été arrêté et convenu ce qui suit:</h2>
        <strong>Article 1: Nature de la mission</strong> 
-       Le client confie au Prestatire une mission consistant à répondre aux besoins suivants: 
-       Dans le cadre de
-          cette mission, le Prestataire s'engage à mettre ses collaborateurs à
-          la disposition du Client si cela est nécessaire pour la bonne
-          exécution de la mission. Cependant, lesdits salariés resteront sous
-          l'autorité et sous la responsabilité du Prestataire pendant leur
-          intervention chez le Client. 
+      <p> Le client confie au Prestatire une mission consistant
+       à répondre aux besoins suivants:  </p>
+      <p> Dans le cadre de
+          cette mission, le Prestataire s'engage à mettre ses 
+          collaborateurs à la disposition du Client si cela </p>
+        <p>est nécessaire pour
+           la bonne
+          exécution de la mission. Cependant, lesdits salariés
+           resteront sous </p>
+          <p> l'autorité et sous la responsabilité du Prestataire pendant leur
+          intervention chez le Client.  </p>
        
   
-      <p class="h5">Article deux - Prix et modalités de paiement 
+      <p class="h5">Article deux - Prix et modalités de paiement  </p>
   <p class="surligne">
   Au choix selon le cas : 
   <ul><li> Le Client
     s'engage à payer au Prestataire un prix total de <span class="txt_modifiable">[x]</span>
-    € hors taxes payable selon l'échéancier suivant : 
+    € hors taxes payable selon l'échéancier suivant :
     <ul><li> <span class="txt_modifiable">[x]</span>
       € hors taxes lors de la signature du présent contrat, 
       </li><li> <span class="txt_modifiable">[x]</span>
@@ -49,39 +53,39 @@
     </li></ul></li><li> Le Client s'engage à payer un
     prix fixé en fonction d'un tarif horaire de <span class="txt_modifiable">[x]</span>
     € hors taxes. 
-  </li></ul> D'autre part,
+  </li></ul> <p> D'autre part,
   il s'engage à rembourser au Prestataire les éventuels frais de
   déplacement ou de séjour à l'hôtel qui seraient nécessités
   pour l'exécution de la mission. Ces frais seront engagés après
   accord écrit du Client et ils devront être remboursés sur
-  présentation des justificatifs. 
+  présentation des justificatifs.  </p>
   <p class="h5">Article trois - Obligations du Prestataire 
    Il est rappelé
   que le Prestataire est tenu à une obligation de moyens. Il doit donc
   exécuter sa mission conformément aux règles en vigueur dans sa
   profession et en se conformant à toutes les données acquises dans
-  son domaine de compétence. 
-   Il reconnaît que
+  son domaine de compétence.  </p>
+<p> Il reconnaît que
   le Client lui a donné une information complète sur ses besoins et
   sur les impératifs à respecter. 
    Il s'engage à se
   conformer au règlement intérieur et aux consignes de sécurité
-  applicables chez le Client. 
-   Enfin, il
+  applicables chez le Client. </p> 
+<p> Enfin, il
   s'engage à observer la confidentialité la plus totale en ce qui
   concerne le contenu de la mission et toutes les informations ainsi
-  que tous les documents que le Client lui aura communiqués. 
+  que tous les documents que le Client lui aura communiqués. </p>
   
   <p class="h5">Article quatre - Obligations du Client 
    Afin de permettre
   au Prestataire de réaliser la mission dans de bonnes conditions, le
   Client s'engage à lui remettre tous les documents nécessaires
-  dans les meilleurs délais. 
+  dans les meilleurs délais.  </p>
   <p class="h5">Article cinq – Responsabilité 
    La responsabilité
   du Prestataire ne pourra être mise en cause qu'en cas de manquement
   à son obligation de moyens. En outre, le Client ne pourra pas
-  l'invoquer dans les cas suivants : 
+  l'invoquer dans les cas suivants :  </p>
   <ul><li> s'il a omis
     de remettre au Prestataire un document ou une information nécessaire
     pour la mission, 
@@ -92,7 +96,7 @@
    Le présent
   contrat est assujetti au droit français. Tout litige qui résulterait
   de son exécution sera soumis aux tribunaux dont dépend le siège
-  social du Prestataire. 
+  social du Prestataire.  </p>
   
    Fait le <span class="txt_modifiable">date contrat</span>
   en deux exemplaires à <span class="txt_modifiable">Dakar</span> 
@@ -106,3 +110,4 @@
     </tr></table>
   </div>
 </div>
+<button class="btn-primary" (click)="saveContrat()">Télécharger</button>
