--- a/angular7MoneyTransfert/src/app/partenaire/partenaire.component.css
+++ b/angular7MoneyTransfert/src/app/partenaire/partenaire.component.css
@@ -13,7 +13,7 @@ h2{
   font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: white;
+  color: #007BFF;
   padding: 30px 0;
 }
 
@@ -22,6 +22,24 @@ h2{
 .table-wrapper{
   margin: 10px 70px 70px;
   box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+}
+th{
+  background-color: #007BFF;
+  color: #ffffff;
+  border: 1 solid red;
+  padding: 8px;
+  width: 15%;
+}
+td{
+  color: #007BFF;
+  padding: 8px;
+  border-right: 1px solid #f8f8f8;
+  font-size: 12px;
+  text-align: center;
+}
+#header{
+text-align: center;
+border: 1 solid red;
 }
 
 .fl-table {
@@ -35,18 +53,25 @@ h2{
   white-space: nowrap;
   background-color: white;
 }
-
-.fl-table td, .fl-table th {
+/* button{
+  background: #007BFF;
+  color:white;
+} */
+fa-icon{
+  color:#007BFF;
+}
+/* th {
   text-align: center;
-  padding: 8px;
 }
 
 .fl-table td {
   border-right: 1px solid #f8f8f8;
   font-size: 12px;
+  text-align: center;
+  padding: 8px;
 }
-
-.fl-table thead th {
+ */
+/* .fl-table thead th {
   color: #ffffff;
   background: #4FC3A1;
 }
@@ -55,15 +80,18 @@ h2{
 .fl-table thead th:nth-child(odd) {
   color: #ffffff;
   background: #324960;
-}
+} */
 
-.fl-table tr:nth-child(even) {
+/* .fl-table tr:nth-child(even) {
   background: #F8F8F8;
-}
+} */
+/*  input{
+    margin: 0,auto
+} */
 
 /* Responsive */
 
-@media (max-width: 767px) {
+/*   @media (max-width: 767px) {
   .fl-table {
       display: block;
       width: 100%;
@@ -125,4 +153,4 @@ h2{
       display: block;
       text-align: center;
   }
-}
+} */
