--- a/angular7MoneyTransfert/src/app/add-user/add-user.component.html
+++ b/angular7MoneyTransfert/src/app/add-user/add-user.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
-<div class="container mt-5 container">
+<div class="container mt-5">
       <div class="row">
         <div class="col-md-12">
-          <h2>Ajout d'un utilisateur</h2> <hr>
+          <h2>Interface admin Partenaire</h2> <hr>
         </div>
       </div>
       <div class="row">
@@ -23,7 +23,7 @@
                             <label for="uname1">Username</label>
                             <input type="text"  formControlName="username" name="username" class="form-control">
                           </div>
-                          <div *ngFor="let error of errorMessage.username">
+                          <div id="error" *ngFor="let error of errorMessage.username">
                               <div *ngIf="registerUserData.get('username').hasError(error.type) &&
                               (registerUserData.get('username').dirty || registerUserData.get('username').touched)">
                                   {{error.message}}
@@ -33,7 +33,7 @@
                         <label>Password</label>
                         <input type="password" formControlName="password" name="password" class="form-control">
                       </div>
-                      <div *ngFor="let error of errorMessage.password">
+                      <div id="error" *ngFor="let error of errorMessage.password">
                           <div *ngIf="registerUserData.get('password').hasError(error.type) &&
                           (registerUserData.get('password').dirty || registerUserData.get('password').touched)">
                               {{error.message}}
@@ -43,7 +43,7 @@
                           <label for="uname1">Email</label>
                           <input type="text" formControlName="email" name="email" class="form-control">
                         </div>
-                        <div *ngFor="let error of errorMessage.email">
+                        <div id="error" *ngFor="let error of errorMessage.email">
                             <div *ngIf="registerUserData.get('email').hasError(error.type) &&
                             (registerUserData.get('email').dirty || registerUserData.get('email').touched)">
                                 {{error.message}}
@@ -53,7 +53,7 @@
                             <label for="uname1">NomComplet</label>
                             <input type="text" formControlName="nomComplet" name="nomComplet" class="form-control">
                           </div>
-                          <div *ngFor="let error of errorMessage.nomComplet">
+                          <div id="error" *ngFor="let error of errorMessage.nomComplet">
                               <div *ngIf="registerUserData.get('nomComplet').hasError(error.type) &&
                               (registerUserData.get('nomComplet').dirty || registerUserData.get('nomComplet').touched)">
                                   {{error.message}}
@@ -64,7 +64,7 @@
                               <input type="text" formControlName="adresse" name="adresse" class="form-control">
                             </div>
                             <div *ngFor="let error of errorMessage.adresse">
-                                <div *ngIf="registerUserData.get('adresse').hasError(error.type) &&
+                                <div id="error" *ngIf="registerUserData.get('adresse').hasError(error.type) &&
                                 (registerUserData.get('adresse').dirty || registerUserData.get('adresse').touched)">
                                     {{error.message}}
                                 </div>
@@ -76,7 +76,7 @@
                             <input type="text" formControlName="telephone" name="telephone" class="form-control">
                           </div>
                           <div *ngFor="let error of errorMessage.telephone">
-                              <div *ngIf="registerUserData.get('telephone').hasError(error.type) &&
+                              <div id="error" *ngIf="registerUserData.get('telephone').hasError(error.type) &&
                               (registerUserData.get('telephone').dirty || registerUserData.get('telephone').touched)">
                                   {{error.message}}
                               </div>
@@ -87,9 +87,8 @@
                                 <span *ngIf="isSuperAdmin()">
                                   <option value="adminPartenaire" >Admin Partenaire</option>
                                   <option value="caissier">Caissier</option>
-                                  <option value="partenaire">Partenaire</option>
                                 </span>
-                                      <option value="user">Utilisateur</option>
+                                      <option value="userPart">Utilisateur</option>
                               </select>
                             </div>
                               <div class="form-group">
@@ -100,7 +99,7 @@
                                   (change)="handleFileInput($event.target.files)">
                               </div>
                               <div class="form-group">
-                                <div *ngIf="errorMessages" class="alert alert-danger">{{errorMessages}}</div>
+                                <div id="error" *ngIf="errorMessages" class="alert alert-danger">{{errorMessages}}</div>
                               </div>
                               
                     </div>
