--- a/angular7MoneyTransfert/src/app/edit-partenaire/edit-partenaire.component.html
+++ b/angular7MoneyTransfert/src/app/edit-partenaire/edit-partenaire.component.html
@@ -1,56 +1,61 @@
 <app-navbar></app-navbar>
-<div class="py-5">
-  <div class="row">
-    <div class="col-md-6 mx-auto">
-      <span class="anchor" id="formLogin"></span>
-
-      <!-- form card registration -->
-      <div class="card rounded-0">
-        <div class="card-header">
-          <h3 class="mb-0">Update Partenaire</h3>
+<div class="container mt-5">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Interface Super Admin</h2><hr>
         </div>
-        <div class="card-body">
-          <form class="form">
-            <div class="row">
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <label for="uname1">Raison Social</label>
-                      <input type="text" [(ngModel)]="partenaireData.raisonSocial" name="raisonSocial" class="form-control rounded-0" required>
-                    </div>
-                <div class="form-group">
-                  <label>Ninea</label>
-                  <input type="text" [(ngModel)]="partenaireData.ninea" name="ninea" class="form-control rounded-0"  required>
-                </div>
-                <div class="form-group">
-                    <label for="uname1">Email</label>
-                    <input type="text" [(ngModel)]="partenaireData.email" name="email" class="form-control rounded-0" required>
-                  </div>
-              </div>
-              <div class="col-md-1"></div>
-              <div class="col-md-5">
-                  <div class="form-group">
-                      <label for="uname1">NomComplet</label>
-                      <input type="text" [(ngModel)]="partenaireData.nomComplet" name="nomComplet" class="form-control rounded-0" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="uname1">Adresse</label>
-                        <input type="text" [(ngModel)]="partenaireData.adresse" name="adresse" class="form-control rounded-0" required>
-                      </div>
-                      <div class="form-group">
-                          <label for="uname1">Telephone</label>
-                          <input type="text" [(ngModel)]="partenaireData.telephone" name="telephone" class="form-control rounded-0" required>
-                        </div>
-              </div>
-            </div>
-            <button type="button" (click)="editPartenaire()" class="btn btn-primary float-right">Modifier</button>
-          </form>
-        </div>
-        <!--/card-block-->
       </div>
-      <!-- /form card login -->
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+                <span class="anchor" id="formLogin"></span>
 
+                <!-- form card registration -->
+                <div class="card rounded-0">
+                  <div class="card-header">
+                    <h2 class="mb-0">Update Partenaire</h2>
+                  </div>
+                  <div class="card-body">
+                    <form class="form">
+                      <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="uname1">Raison Social</label>
+                                <input type="text" [(ngModel)]="partenaireData.raisonSocial" name="raisonSocial" class="form-control rounded-0" required>
+                              </div>
+                          <div class="form-group">
+                            <label>Ninea</label>
+                            <input type="text" [(ngModel)]="partenaireData.ninea" name="ninea" class="form-control rounded-0"  required>
+                          </div>
+                          <div class="form-group">
+                              <label for="uname1">Email</label>
+                              <input type="text" [(ngModel)]="partenaireData.email" name="email" class="form-control rounded-0" required>
+                            </div>
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-5">
+                            <div class="form-group">
+                                <label for="uname1">NomComplet</label>
+                                <input type="text" [(ngModel)]="partenaireData.nomComplet" name="nomComplet" class="form-control rounded-0" required>
+                              </div>
+                              <div class="form-group">
+                                  <label for="uname1">Adresse</label>
+                                  <input type="text" [(ngModel)]="partenaireData.adresse" name="adresse" class="form-control rounded-0" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="uname1">Telephone</label>
+                                    <input type="text" [(ngModel)]="partenaireData.telephone" name="telephone" class="form-control rounded-0" required>
+                                  </div>
+                        </div>
+                      </div>
+                      <button id="submit" type="button" (click)="editPartenaire()" class="btn btn-primary float-right">Modifier</button>
+                    </form>
+                  </div>
+                  <!--/card-block-->
+                </div>
+                <!-- /form card login -->
+
+          </div>
+        <div class="col-md-2"></div>
     </div>
-
-
-  </div>
 </div>
