--- a/angular7MoneyTransfert/src/app/edit-user/edit-user.component.html
+++ b/angular7MoneyTransfert/src/app/edit-user/edit-user.component.html
@@ -1,55 +1,61 @@
 <app-navbar></app-navbar>
-<div class="py-5">
-  <div class="row">
-    <div class="col-md-6 mx-auto">
-      <span class="anchor" id="formLogin"></span>
-
-      <!-- form card registration -->
-      <div class="card rounded-0">
-        <div class="card-header">
-          <h3 class="mb-0">Register</h3>
+<div class="py-5 container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Interface utilisateur</h2><hr>
         </div>
-        <div class="card-body">
-          <form class="form">
-              <div class="form-group">
-                  <label for="uname1">Username</label>
-                  <input type="text" [(ngModel)]="registerUserData.username" name="username" class="form-control rounded-0" required>
-                </div>
-            <div class="form-group">
-              <label>Password</label>
-              <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0"  required>
-            </div>
-            <div class="form-group">
-                <label for="uname1">Email</label>
-                <input type="text" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" required>
-              </div>
-              <div class="form-group">
-                  <label for="uname1">NomComplet</label>
-                  <input type="text" [(ngModel)]="registerUserData.nomComplet" name="nomComplet" class="form-control rounded-0" required>
-                </div>
-                <div class="form-group">
-                    <label for="uname1">Adresse</label>
-                    <input type="text" [(ngModel)]="registerUserData.adresse" name="adresse" class="form-control rounded-0" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="uname1">Telephone</label>
-                      <input type="text" [(ngModel)]="registerUserData.telephone" name="telephone" class="form-control rounded-0" required>
-                    </div>
-                      <div class="form-group">
-                        <label for="uname1">Compte</label>
-                        <select [(ngModel)]="registerUserData.compte" name="comptes" id="">
-                          <option *ngFor="let c of idCompteData"  value="{{c.id}}">{{c.numeroCompte}}</option>
-                        </select>
-                      </div>
-            <button type="button" (click)="editUser()" class="btn btn-primary float-right">Register</button>
-          </form>
-        </div>
-        <!--/card-block-->
       </div>
-      <!-- /form card login -->
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <span class="anchor" id="formLogin"></span>
 
+            <!-- form card registration -->
+            <div class="card rounded-0">
+              <div class="card-header">
+                <h2 class="mb-0">Modification</h2>
+              </div>
+              <div class="card-body">
+                <form class="form">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <label for="uname1">Username</label>
+                              <input type="text" [(ngModel)]="registerUserData.username" name="username" class="form-control rounded-0" required>
+                            </div>
+                        <div class="form-group">
+                          <label>Password</label>
+                          <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0"  required>
+                        </div>
+                        <div class="form-group">
+                            <label for="uname1">Email</label>
+                            <input type="text" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" required>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <label for="uname1">NomComplet</label>
+                              <input type="text" [(ngModel)]="registerUserData.nomComplet" name="nomComplet" class="form-control rounded-0" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="uname1">Adresse</label>
+                                <input type="text" [(ngModel)]="registerUserData.adresse" name="adresse" class="form-control rounded-0" required>
+                              </div>
+                              <div class="form-group">
+                                  <label for="uname1">Telephone</label>
+                                  <input type="text" [(ngModel)]="registerUserData.telephone" name="telephone" class="form-control rounded-0" required>
+                                </div>
+                     </div>
+                  </div>
+                  <button id="submit"type="button" (click)="editUser()" class="btn btn-primary float-right">Modifier</button>
+                </form>
+              </div>
+              <!--/card-block-->
+            </div>
+            <!-- /form card login -->
+
+
+        </div>
+        <div class="col-md-2"></div>
     </div>
-
-
-  </div>
 </div>
